# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  sonar-project.properties
.github/workflows/: sonarcloud.yml
code/: manage.py  pyproject.toml
code/hexlet_code/: settings.py  urls.py  wsgi.py
code/hexlet_code.egg-info/: SOURCES.txt  top_level.txt
code/locale/ru/LC_MESSAGES/: django.po
code/task_manager/: admin.py  models.py
code/task_manager/migrations/: 0001_initial.py  0003_label_task_labels.py
hexlet_code/: settings.py  urls.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: admin.py  asgi.py  filters.py  labels_urls.py  labels_views.py  models.py  settings.py  statuses_urls.py  statuses_views.py  tasks_urls.py  tasks_views.py  tests.py  urls.py  users_urls.py  users_views.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/migrations/: 0002_task.py  0004_alter_task_name.py
task_manager/templates/: base.html
task_manager/templates/task_manager/: index.html  login.html
task_manager/templates/task_manager/labels/: create.html  list.html
task_manager/templates/task_manager/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/task_manager/tasks/: create.html  delete.html  detail.html  list.html  update.html
task_manager/templates/task_manager/users/: create.html  delete.html  list.html  (+1 more)
templates/: base.html
(+2 files in other folders)
